# wireguard-manager

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  setup.cfg
.github/workflows/: python-package.yml
tests/: test_wgm.py
tests/sample/: server_private_key  server_public_key  wg0.conf
tests/sample/clients/sample_user/: private_key  public_key  username.conf
wgm/: __init__.py  __main__.py  command.py  config.py
wgm/commands/: create.py  delete.py  list.py  version.py
