[tool.poetry]
name = "wgm"
version = "0.1.6"
description = "WireGuard Manager (wgm) is a command-line tool designed to simplify the management of WireGuard VPN users. It allows you to easily create, list, and delete WireGuard users with a few simple commands."
authors = ["Roberto Lizana <rober.lizana@gmail.com>"]
readme = "README.md"
packages = [
    { include = "wgm", from = "." }
]


[tool.poetry.dependencies]
python = "^3.12"
cleo = "^2.1.0"

[tool.poetry.dev-dependencies]
pre-commit = "^3.0.0"
poetry-dynamic-versioning = "^1.4.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
wgm = "wgm.__main__:main"
